--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: #d1e5ff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(#642bff, #ff22e6);
+  border-radius: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hi {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    222deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
+  position: fixed;
+  z-index: -4565;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Effect-flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.about-us {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.about-us h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about-us p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.About-img {
+  width: 230px;
+  margin: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px grey;
+}
+.About-flex {
+  display: flex;
+}
+.Contect-Title {
+  font-size: 40px;
+}
+.About-Contect {
+  margin-top: 60px;
+}
+.From1 {
+  border: 1.5px dashed black;
+  border-radius: 200px;
+  text-align: center;
+  box-shadow: 0 0 10px gray;
+}
+.From-input-name {
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+}
+.From-input-Comment {
+  width: 100%;
+  height: 190px;
+  margin-top: 30px;
 }
